--- a/frontend/core/src/main/webapp/static/app/tasks/menu.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/menu.html
@@ -1,9 +1,9 @@
-<section id="tasks-lists" class="two-column-grid page" ng-init="newList={title:undefined}" ng-controller="TasksController">
+<section id="tasks-lists" class="two-column-grid page" ng-controller="TasksController">
   <div class="column">
     <header id="tasks-lists-header" class="page-header" ng-init="heading='menu'" ng-include="'static/app/base/pageHeader.html'"></header>
     <div id="tasks-lists-page-content-container" class="content-container page-content-container">
       <div class="inner-page-content-container">
-        <section>
+        <section ng-init="newList={title:undefined}">
           <h3><a href class="page-header" ng-click="gotoLists()">lists</a></h3>
           <ul class="indent list-arrow-right">
             <li ng-if="lists && lists.length" ng-class="selected" ng-repeat="list in lists">
@@ -19,19 +19,27 @@
                   <input type="text" class="simple-input" id="listTitle" ng-model="newList.title" placeholder="add list..."></input>
                 </div>
               </form>
-            </li> 
+            </li>
           </ul>
         </section>
 
-        <section>
+        <section ng-init="newContext={title:undefined, tagType:'context'}">
           <h3><a href ng-click="gotoContexts()" class="page-header">contexts</a></h3>
           <ul class="indent list-arrow-right">
             <li ng-show="contexts.length" ng-repeat="context in contexts = (tags | filter:{tagType:'context'})">
-              <a class="click-to-slide" href="#/{{prefix}}/tasks/context/{{context.uuid}}">
+              <a class="click-to-slide" href ng-click="goToContext(context.uuid)">
                 <span class="link-title">@{{context.title}}</span><span class="icon-arrow-right"></span>
               </a>
             </li>
-          </ul>      
+            <li>
+              <form class="swiper-no-swiping" role="form" name="addContextForm" ng-submit="addContext(newContext)">
+                <div class="form-group">
+                  <label class="sr-only" for="contextTitle">title</label>
+                  <input type="text" class="simple-input" id="contextTitle" ng-model="newContext.title" placeholder="add context..."></input>
+                </div>
+              </form>
+            </li> 
+          </ul>
         </section>
       </div>
     </div>
