--- a/frontend/core/src/main/webapp/static/app/main/home.html
+++ b/frontend/core/src/main/webapp/static/app/main/home.html
@@ -59,7 +59,7 @@
         </div>
         <div ng-if="omnibarText.title" id="filtered-items-container">          
           <div class="filtered-items" ng-show="filteredItems.length" ng-controller="ItemsController">
-            <h3><a href ng-click="gotoInbox()">inbox</a></h3>
+            <h3 ><a href ng-click="gotoInbox()" class="page-header">inbox</a></h3>
             <div class="inner-page-content-container" accordion>
               <div ng-repeat="item in filteredItems = (items | filter:{title:omnibarText.title})">
                 <div accordion-title="item" edit-item="editItem(item)" edit-item-title="editItemTitle(item)" toggle-complete="false"></div>
@@ -70,12 +70,23 @@
             </div>
           </div>
           <div class="filtered-items" ng-show="filteredTasks.length" ng-controller="TasksController">
-            <h3><a href ng-click="gotoTasks()">tasks</a></h3>
+            <h3><a href ng-click="gotoTasks()" class="page-header">tasks</a></h3>
             <div class="inner-page-content-container" accordion>
               <div ng-repeat="task in filteredTasks = (tasks | filter:{title:omnibarText.title})">
                 <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
                 <div class="accordion-body" ng-if="isOpen(task)">
                   <div class="accordion-inner" ng-include="'static/app/tasks/taskActions.html'"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="filtered-items" ng-show="filteredNotes.length" ng-controller="NotesController">
+            <h3><a href ng-click="gotoTasks()" class="page-header">notes</a></h3>
+            <div class="inner-page-content-container" accordion>
+              <div ng-repeat="note in filteredNotes = (notes | filter:{title:omnibarText.title})">
+                <div accordion-title="note" edit-item="editNote(task)" edit-item-title="editNoteTitle(note)" has-complete="false" toggle-complete></div>
+                <div class="accordion-body" ng-if="isOpen(note)">
+                  <div class="accordion-inner" ng-include="'static/app/notes/noteActions.html'"></div>
                 </div>
               </div>
             </div>
