--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -48,6 +48,7 @@
     <script src="static/app/base/BackendClientService.js"></script>
     <script src="static/app/base/ErrorHandlerService.js"></script>
     <script src="static/app/base/FilterService.js"></script>
+    <script src="static/app/base/ListsController.js"></script>
     <script src="static/app/base/ListsService.js"></script>
     <script src="static/app/base/OwnerService.js"></script>
     <script src="static/app/base/SwiperService.js"></script>
