--- a/frontend/core/src/main/webapp/static/app/tasks/menu.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/menu.html
@@ -3,7 +3,7 @@
     <header id="tasks-lists-header" class="page-header" ng-init="heading='menu'" ng-include="'static/app/base/pageHeader.html'"></header>
     <div id="tasks-lists-page-content-container" class="content-container page-content-container">
       <div class="inner-page-content-container">
-        <section ng-init="newList={title:undefined}">
+        <section ng-init="newList={title:undefined}" ng-controller="ListsController">
           <h3><a href class="page-header" ng-click="gotoLists()">lists</a></h3>
           <ul class="indent list-arrow-right">
             <li ng-if="lists && lists.length" ng-class="selected" ng-repeat="list in lists">
