--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -36,6 +36,7 @@
     <script src="static/common/UUIDService.js"></script>
     <script src="static/common/clickElsewhereDirective.js"></script>
     <script src="static/common/dateTodayDirective.js"></script>
+    <script src="static/common/passwordMatchDirective.js"></script>
 
     <script src="static/app/app.js"></script>
 
