Hide account page, because it doesn't have layout yet

--- a/frontend/core/src/main/webapp/static/app/main/home.html
+++ b/frontend/core/src/main/webapp/static/app/main/home.html
@@ -22,7 +22,7 @@
                 </li>
               </ul>
             </li>
-            <li>
+            <li ng-hide="true">
               <a href="#/my/account">account</a>
             </li>
             <li>
