--- a/frontend/core/src/main/webapp/static/app/tasks/dates.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/dates.html
@@ -15,50 +15,49 @@
             <li class="justified-element datepicker-date">
               <a href ng-click="dateClicked(dates[0].yyyymmdd)">
                 <span>{{dates[0].weekday}}</span><br>
-                <span ng-model="activeDay" ng-class="{active: activeDay === dates[0].yyyymmdd}">{{dates[0].date}}</span>
+                <span ng-class="{activeDay: isDayActive(dates[0].yyyymmdd)}">{{dates[0].date}}</span>
               </a>
             </li>
 
             <li class="justified-element datepicker-date">
               <a href ng-click="dateClicked(dates[1].yyyymmdd)">
                 <span>{{dates[1].weekday}}</span><br>
-                <span ng-model="activeDay" ng-class="{active: activeDay === dates[1].yyyymmdd}">{{dates[1].date}}</span>
+                <span ng-class="{activeDay: isDayActive(dates[1].yyyymmdd)}">{{dates[1].date}}</span>
               </a>
             </li>
 
             <li class="justified-element datepicker-date">
               <a href ng-click="dateClicked(dates[2].yyyymmdd)">
                 <span>{{dates[2].weekday}}</span><br>
-                <span ng-model="activeDay" ng-class="{active: activeDay === dates[2].yyyymmdd}">{{dates[2].date}}</span>
+                <span ng-class="{activeDay: isDayActive(dates[2].yyyymmdd)}">{{dates[2].date}}</span>
               </a>
             </li>
 
             <li class="justified-element datepicker-date">
               <a href ng-click="dateClicked(dates[3].yyyymmdd)">
                 <span>{{dates[3].weekday}}</span><br>
-                <span ng-model="activeDay" ng-class="{active: activeDay === dates[3].yyyymmdd}">{{dates[3].date}}</span>
+                <span ng-class="{activeDay: isDayActive(dates[3].yyyymmdd)}">{{dates[3].date}}</span>
               </a>
             </li>
 
             <li class="justified-element datepicker-date">
               <a href ng-click="dateClicked(dates[4].yyyymmdd)">
                 <span>{{dates[4].weekday}}</span><br>
-                <span ng-model="activeDay" ng-class="{active: activeDay === dates[4].yyyymmdd}">{{dates[4].date}}</span>
+                <span ng-class="{activeDay: isDayActive(dates[4].yyyymmdd)}">{{dates[4].date}}</span>
               </a>
             </li>
 
             <li class="justified-element datepicker-date">
               <a href ng-click="dateClicked(dates[5].yyyymmdd)">
                 <span>{{dates[5].weekday}}</span><br>
-                <span ng-model="activeDay" ng-class="{active: activeDay === dates[5].yyyymmdd}">{{dates[5].date}}</span>
+                <span ng-class="{activeDay: isDayActive(dates[5].yyyymmdd)}">{{dates[5].date}}</span>
               </a>
             </li>
 
             <li class="justified-element datepicker-date">
               <a href ng-click="dateClicked(dates[6].yyyymmdd)">
                 <span>{{dates[6].weekday}}</span><br>
-                <span ng-model="activeDay" ng-class="{active: activeDay === dates[6].yyyymmdd}">{{dates[6].date}}</span>
-                <span>{{date.yyyymmdd}}</span>
+                <span ng-class="{activeDay: isDayActive(dates[6].yyyymmdd)}">{{dates[6].date}}</span>
               </a>
             </li>
 
