--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -47,6 +47,7 @@
     <script src="static/app/base/storage/SessionStorageService.js"></script>
     <script src="static/app/base/ArrayService.js"></script>
     <script src="static/app/base/BackendClientService.js"></script>
+    <script src="static/app/base/ContextsController.js"></script>
     <script src="static/app/base/ErrorHandlerService.js"></script>
     <script src="static/app/base/FilterService.js"></script>
     <script src="static/app/base/ListsController.js"></script>
