Fixed more button width and bug with context being saved as keyword on update

--- a/frontend/core/src/main/webapp/static/app/tasks/lists.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/lists.html
@@ -10,7 +10,7 @@
                 <h3><a class="content" href ng-click="toggleListContent()">{{list.title}}</a></h3>
                 <div ng-if="showListContent">
                   <ul class="button-row">
-                    <li class="button-container left-of-two border-right" ng-hide="mainlinksFilter">
+                    <li class="button-container left-of-two border-right">
                       <button class="default-button" type="button" ng-click="editList(list)">
                         more
                       </button>
