--- a/frontend/core/src/main/webapp/static/app/tasks/lists.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/lists.html
@@ -4,7 +4,7 @@
     <div id="tasks-lists-page-content-container" class="content-container page-content-container">
       <div class="swiper-container vertical-slides" swiper-container="tasks/lists" swiper-type="page">
         <div class="swiper-wrapper">
-          <div class="swiper-slide" ng-repeat="list in lists" swiper-slide="tasks/lists/{{list.uuid}}" expected-slides="lists.length" ng-init="subtask = {relationships: {parent: list.uuid}}">
+          <div class="swiper-slide" ng-repeat="list in lists" swiper-slide="tasks/lists/{{list.uuid}}" expected-slides="lists.length" ng-init="subtask = {relationships: {list: list.uuid}}">
             <div class="inner-slide-content-container">
               <section class="list" ng-controller="ListsController">
                 <h3><a class="content" href ng-click="toggleListContent()">{{list.title}}</a></h3>
