--- a/frontend/core/src/main/webapp/static/app/tasks/dates.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/dates.html
@@ -79,7 +79,7 @@
                 <h3>{{date.displayDate}}</h3>
                 <div>
                   <div class="inner-page-content-container" accordion>
-                    <div ng-repeat="task in tasks | tasksFilter:{name:'tasksByDate', filterBy: date}">
+                    <div ng-repeat="task in tasks | tasksByDate:date.yyyymmdd">
                       <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
                       <div class="accordion-body" ng-if="isOpen(task)">
                         <div class="accordion-inner" ng-include="'static/app/tasks/taskActions.html'"></div>
