--- a/frontend/phonegap/app/www/index.html
+++ b/frontend/phonegap/app/www/index.html
@@ -28,6 +28,7 @@
     <script>
       var urlPrefix = 'https://ext.md';
       var html5Mode = false;
+      var bindToFocusEvent = false;
   </script>
 </head>
 <body>
