Fixed phonegap index.html initialized angular view twice.

--- a/frontend/phonegap/app/www/index.html
+++ b/frontend/phonegap/app/www/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     
-    <div role="main" ng-view/>
+    <div main-view/>
     
     <script src="static/em.min.js"></script>
 </body>
