--- a/frontend/core/src/main/webapp/static/app/auth/login.html
+++ b/frontend/core/src/main/webapp/static/app/auth/login.html
@@ -5,15 +5,16 @@
         <span class="icon-logo_with_text"></span>
       </div>
       <div class="content">
-        <div error-alert-bar alertmessage="errorHandler.errorMessage"></div>
-        <form role="form" id="login-form" name="loginForm">
+        <form role="form" id="login-form" name="loginForm" novalidate>
           <div id="email" class="form-group">
-            <label for="input-email" class="sr-only">email</label>
-            <input type="email" class="simple-input" id="input-email" ng-model="user.username" placeholder="enter email..." required />
+            <label for="email" class="sr-only">email</label>
+            <input type="email" name="email" class="simple-input" id="input-email" ng-model="user.username" placeholder="enter email..." ng-blur="emailAttempted=true" required />
+            <p ng-show="loginForm.email.$invalid && !loginForm.email.$pristine && emailAttempted" class="validation-error">Not a valid email address</p>
           </div>
           <div id="password" class="form-group">
             <label for="input-password" class="sr-only">password</label>
-            <input type="password" class="form-control simple-input" id="input-password" ng-model="user.password" placeholder="enter password..." required />
+            <input type="password" name="password" class="simple-input" id="input-password" ng-model="user.password" placeholder="enter password..." ng-minlength="7" ng-blur="passwordAttempted=true" required />
+            <p ng-show="loginForm.password.$invalid && !loginForm.password.$pristine && passwordAttempted" class="validation-error">Password must be 7 characters or more</p>
           </div>
           <div class="form-group">
             <input class="input-checkbox" type="checkbox" name="checkbox" id="remember" ng-model="user.remember" checked="checked" />
@@ -23,6 +24,7 @@
             <button type="submit" id="login-button" class="wide-button normal-button" ng-disabled="!loginForm.$valid" ng-click="userLogin()">
               <span class="button-text">login</span>
             </button>
+            <p ng-show="loginFailed" class="validation-error">Invalid username or password</p>
           </div>
         </form>
       </div>
