--- a/frontend/core/src/main/webapp/static/app/base/pageHeader.html
+++ b/frontend/core/src/main/webapp/static/app/base/pageHeader.html
@@ -1,6 +1,6 @@
 <nav class="swiper-no-swiping" id="page-header" role="navigation">
   <div class="left-of-three" id="collective">&nbsp;</div>
-  <div class="center-of-three" id="page-heading"><h3>{{heading}}</h3></div>
+  <div class="center-of-three" id="page-heading"><h3>{{heading}}<span class="offline-indicator" ng-if="!online">*</span></h3></div>
   <div class="right-of-three" id="add-new-button">
     <button type="button" class="button" ng-click="addNew()">
       <span class="icon-plus"></span>
