Swiper click directive and touch listener functions detecting swipe to prevent clicks when swiping.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -58,6 +58,7 @@
     <script src="static/app/base/accordionDirective.js"></script>
     <script src="static/app/base/accordionTitleDirective.js"></script>    
     <script src="static/app/base/expandingTextareaDirective.js"></script>   
+    <script src="static/app/base/swiperClickDirective.js"></script>
     <script src="static/app/base/swiperContainerDirective.js"></script>
     <script src="static/app/base/swiperSlideDirective.js"></script>
 
