--- a/frontend/core/src/main/webapp/static/app/tasks/menu.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/menu.html
@@ -4,10 +4,10 @@
     <div id="tasks-lists-page-content-container" class="content-container page-content-container">
       <div class="inner-page-content-container">
         <section ng-init="newList={title:undefined}" ng-controller="ListsController">
-          <h3><a href class="page-header" ng-click="gotoLists()">lists</a></h3>
+          <h3><a href class="page-header" swiper-click="gotoLists()">lists</a></h3>
           <ul class="indent list-arrow-right">
             <li ng-if="lists && lists.length" ng-class="selected" ng-repeat="list in lists">
-              <a class="text-muted click-to-slide" href ng-click="goToList(list.uuid)">
+              <a class="text-muted click-to-slide" href swiper-click="goToList(list.uuid)">
                 <span class="link-title">{{list.title}}</span>
                 <span class="icon-arrow-right"></span>
               </a>
