Updated iDangero.us Swiper 2.4 to 2.4.3. Moved idangerous.swiper.js from lib to common and renamed to swiper.js. Wrapped updateActiveSlide in setTimeout inside swipeToPosition to remove swipe lag after touch end.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -37,6 +37,7 @@
     <script src="static/common/clickElsewhereDirective.js"></script>
     <script src="static/common/dateTodayDirective.js"></script>
     <script src="static/common/passwordMatchDirective.js"></script>
+    <script src="static/common/swiper.js"></script>
 
     <script src="static/app/app.js"></script>
 
@@ -89,7 +90,6 @@
     <script src="static/app/main/mainDirectives.js"></script>
     <script src="static/app/main/PageNotFoundController.js"></script>
 
-    <script src="static/lib/idangerous/idangerous.swiper-2.4.js"></script>
     <script src="static/lib/fastclick.js"></script>
 
     <script src="test/AppTest.js"></script>
