--- a/frontend/core/src/main/webapp/static/app/tasks/taskActions.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskActions.html
@@ -8,7 +8,7 @@
         </button>
       </li>
       <li ng-if="!task.relationships.list" class="button-container" ng-class="getSubtaskButtonClass(task)">
-        <button type="button" class="default-button" ng-click="taskToList(task)">
+        <button type="button" class="default-button" ng-click="taskToList(task)" ng-disabled="!online">
           make list
         </button>
       </li>
