Fixed bug with task moving to different date slide on date change before Done was pressed

--- a/frontend/core/src/main/webapp/static/app/tasks/taskCoreFields.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskCoreFields.html
@@ -6,7 +6,7 @@
     <div ng-switch-when="true">
       <div class="form-group">
         <label for="taskDue" class="sr-only">select date...</label>
-        <input type="date" id="taskDue" class="simple-input swiper-no-swiping" ng-model="task.due" date-today>
+        <input type="date" id="taskDue" class="simple-input swiper-no-swiping" ng-model="task.date" date-today>
       </div>
     </div>
   </div>
