Offline buffer in use only in PhoneGap where remember is hidden

--- a/frontend/phonegap/app/www/index.html
+++ b/frontend/phonegap/app/www/index.html
@@ -29,6 +29,7 @@
       var urlPrefix = 'https://ext.md';
       var html5Mode = false;
       var bindToFocusEvent = false;
+      var useOfflineBuffer = true;
   </script>
 </head>
 <body>
