--- a/frontend/core/src/main/webapp/static/app/auth/login.html
+++ b/frontend/core/src/main/webapp/static/app/auth/login.html
@@ -16,7 +16,7 @@
             <input type="password" name="password" class="simple-input" id="input-password" ng-model="user.password" placeholder="enter password..." ng-minlength="7" ng-blur="passwordAttempted=true" required />
             <p ng-show="loginForm.password.$invalid && !loginForm.password.$pristine && passwordAttempted" class="validation-error">Password must be 7 characters or more</p>
           </div>
-          <div class="form-group">
+          <div ng-hide="rememberByDefault()" class="form-group">
             <input class="input-checkbox" type="checkbox" name="checkbox" id="remember" ng-model="user.remember" checked="checked" />
             <label class="default-element" id="remember" for="remember">remember</label>
           </div>
