--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -63,6 +63,7 @@
 
     <script src="static/app/auth/AuthenticationService.js"></script>
     <script src="static/app/auth/LaunchController.js"></script>
+    <script src="static/app/auth/WaitingController.js"></script>
     <script src="static/app/auth/LoginController.js"></script>
     <script src="static/app/auth/SignupController.js"></script>
     <script src="static/app/auth/mainViewDirective.js"></script>
