Modified POST invite/request to return better response of either 'newInviteRequest', 'inviteRequest', 'invite', 'user'

--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -126,10 +126,10 @@
     <script>
 		$(document).ready(function() {
 			$('#input').click(function() {
-				return postRequest('emailForm', 'result');
+				return postRequest('emailForm', 'result', 'email');
 			});
 			$('#inputLower').click(function() {
-				return postRequest('emailFormLower', 'resultLower');
+				return postRequest('emailFormLower', 'resultLower', 'emailLower');
 			});
 		});
     </script>
