Shorter text when online to avoid alert text formatting poorly

--- a/frontend/core/src/main/webapp/static/app/auth/login.html
+++ b/frontend/core/src/main/webapp/static/app/auth/login.html
@@ -25,7 +25,7 @@
               <span class="button-text">login</span>
             </button>
             <p ng-show="loginFailed" class="validation-error">Invalid username or password</p>
-            <p ng-show="loginOffline" class="validation-error">Can't connect to the server. Are you sure you are online?</p>
+            <p ng-show="loginOffline" class="validation-error">Can't connect to server. Are you online?</p>
           </div>
         </form>
       </div>
