--- a/frontend/core/src/main/webapp/static/app/account/account.html
+++ b/frontend/core/src/main/webapp/static/app/account/account.html
@@ -1,9 +1,19 @@
-<div class="em-slide" ng-controller="AccountController">
-
-  <div navbar>
-    <h1 class="text-primary">account</h1>
-  </div>
-
-  <span>email: {{email}}</span>
-
+<div class="no-slides-container" ng-controller="AccountController">
+  <section id="edit-item" class="one-column-grid page">
+    <div class="column">
+      <header class="heading-header">
+        <h3>account</h3>
+      </header>
+      <div class="content-container simple-content-container">
+        <span>{{email}}</span>
+        <a class="text-muted click-to-slide" href ng-click="gotoChangePassword()">
+          <span class="link-title">change password</span>
+          <span class="icon-arrow-right"></span>
+        </a>
+        <button type="submit" id="account-button" class="wide-button normal-button" ng-click="gotoMainPage()">
+          <span class="button-text">done</span>
+        </button>
+      </div>
+    </div>
+  </section>
 </div>
