Change password, first version.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -70,6 +70,7 @@
 
     <script src="static/app/account/AccountController.js"></script>
     <script src="static/app/account/AccountService.js"></script>
+    <script src="static/app/account/PasswordController.js"></script>
 
     <script src="static/app/tasks/TasksController.js"></script>
     <script src="static/app/tasks/DatesController.js"></script>
