Added modals using Bootstrap 3. Buggy implementation of requiresOnline type exceptio using said modals for getting all items from backend

--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -10,6 +10,9 @@
   <title ng-bind="page.getTitle()"></title>
   <link rel="stylesheet" href="static/css/em.css"/>
   <link rel="shortcut icon" href="static/favicon.ico"/>
+  <script>
+    var useOfflineBuffer = true;
+  </script>
 </head>
 <body>
 
