Added some padding above visit blog button

--- a/frontend/core/src/main/webapp/static/app/auth/waiting.html
+++ b/frontend/core/src/main/webapp/static/app/auth/waiting.html
@@ -18,9 +18,11 @@
             people before you on the extendedmind waiting list
           </span>
         </div>
-        <button type="submit" id="waiting-button" class="wide-button normal-button" ng-click="openEMBlogInNewWindow()">
-          <span class="button-text">visit blog</span>
-        </button>
+        <div class="button-container">
+          <button type="submit" id="waiting-button" class="wide-button normal-button" ng-click="openEMBlogInNewWindow()">
+            <span class="button-text">visit blog</span>
+          </button>
+        </div>
       </div>
     </div>
   </section>
