Enabled account link in home page menu.

--- a/frontend/core/src/main/webapp/static/app/main/home.html
+++ b/frontend/core/src/main/webapp/static/app/main/home.html
@@ -22,11 +22,11 @@
                 </li>
               </ul>
             </li>
-            <li ng-hide="true">
+            <li>
               <a href="#/my/account">account</a>
             </li>
             <li>
-              <a href="" ng-click="logout()">logout</a>
+              <a href ng-click="logout()">logout</a>
             </li>
           </ul>
         </div>
