Added forgot password functionality

--- a/frontend/core/src/main/webapp/static/app/auth/waiting.html
+++ b/frontend/core/src/main/webapp/static/app/auth/waiting.html
@@ -6,13 +6,13 @@
       </div>
       <div class="content">
         <div ng-if="user.email">
-          <span class="waiting-text">
+          <span class="instruction-text">
             we have sent you an email to join extended mind.</br>
             please click on the link in the email to sign up to the service.
           </span>
         </div>
         <div ng-if="user.uuid">
-          <span class="waiting-text">
+          <span class="instruction-text">
             there are currently</br>
             <h1>{{user.inviteQueueNumber}}</h1>
             people before you on the extendedmind waiting list
