--- a/frontend/core/src/main/webapp/static/app/auth/launch.html
+++ b/frontend/core/src/main/webapp/static/app/auth/launch.html
@@ -9,13 +9,13 @@
           <div id="email" class="form-group">
             <label for="email" class="sr-only">email</label>
             <input type="email" name="email" class="simple-input" id="input-email" ng-model="user.email" placeholder="enter email..." ng-blur="emailAttempted=true" required />
-            <p ng-show="launchForm.email.$invalid && !launchForm.email.$pristine && emailAttempted" class="validation-error">Not a valid email address</p>
+            <p ng-show="launchForm.email.$invalid && !launchForm.email.$pristine && emailAttempted" class="validation-error">not a valid email address</p>
           </div>
           <div class="form-group button-container">
             <button type="submit" id="launch-button" class="wide-button normal-button" ng-disabled="!launchForm.$valid" ng-click="launchUser()">
               <span class="button-text">done</span>
             </button>
-            <p ng-show="launchFailed" class="validation-error">Invalid email</p>
+            <p ng-show="launchFailed" class="validation-error">invalid email</p>
           </div>
         </form>
       </div>
