--- a/frontend/core/src/main/webapp/static/app/auth/login.html
+++ b/frontend/core/src/main/webapp/static/app/auth/login.html
@@ -9,12 +9,12 @@
           <div id="email" class="form-group">
             <label for="email" class="sr-only">email</label>
             <input type="email" name="email" class="simple-input" id="input-email" ng-model="user.username" ng-readonly="isUserEmailEditable" placeholder="enter email..." ng-blur="emailAttempted=true" required />
-            <p ng-show="loginForm.email.$invalid && !loginForm.email.$pristine && emailAttempted" class="validation-error">Not a valid email address</p>
+            <p ng-show="loginForm.email.$invalid && !loginForm.email.$pristine && emailAttempted" class="validation-error">not a valid email address</p>
           </div>
           <div id="password" class="form-group">
             <label for="input-password" class="sr-only">password</label>
             <input type="password" name="password" class="simple-input" id="input-password" ng-model="user.password" placeholder="enter password..." ng-minlength="7" ng-blur="passwordAttempted=true" required />
-            <p ng-show="loginForm.password.$invalid && !loginForm.password.$pristine && passwordAttempted" class="validation-error">Password must be 7 characters or more</p>
+            <p ng-show="loginForm.password.$invalid && !loginForm.password.$pristine && passwordAttempted" class="validation-error">password must be 7 characters or more</p>
           </div>
           <div ng-hide="rememberByDefault()" class="form-group">
             <input class="input-checkbox" type="checkbox" name="checkbox" id="remember" ng-model="user.remember" checked="checked" />
@@ -24,8 +24,8 @@
             <button type="submit" id="login-button" class="wide-button normal-button" ng-disabled="!loginForm.$valid" ng-click="userLogin()">
               <span class="button-text">login</span>
             </button>
-            <p ng-show="loginFailed" class="validation-error">Invalid username or password</p>
-            <p ng-show="loginOffline" class="validation-error">Can't connect to server. Are you online?</p>
+            <p ng-show="loginFailed" class="validation-error">invalid username or password. <a class="text-link" href ng-click="gotoForgot()">forgot</a>?</p>
+            <p ng-show="loginOffline" class="validation-error">can't connect to server. are you online?</p>
           </div>
         </form>
       </div>
