--- a/frontend/core/src/main/webapp/static/app/account/changePassword.html
+++ b/frontend/core/src/main/webapp/static/app/account/changePassword.html
@@ -7,10 +7,10 @@
       <div class="content-container simple-content-container">
         <form role="form" id="change_password-form" name="change_passwordForm" novalidate>
 
-          <div id="oldPassword" class="form-group">
-            <label for="oldPassword" class="sr-only">old password</label>
-            <input type="password" name="oldPassword" class="simple-input" id="input-old-password" ng-model="user.oldPassword" placeholder="enter old password..." ng-minlength="7" ng-blur="oldPasswordAttempted=true" required />
-            <p ng-show="change_passwordForm.oldPassword.$invalid && !change_passwordForm.oldPassword.$pristine && oldPasswordAttempted" class="validation-error">Password must be 7 characters or more</p>
+          <div id="currentPassword" class="form-group">
+            <label for="currentPassword" class="sr-only">old password</label>
+            <input type="password" name="currentPassword" class="simple-input" id="input-old-password" ng-model="user.currentPassword" placeholder="enter old password..." ng-minlength="7" ng-blur="currentPasswordAttempted=true" required />
+            <p ng-show="change_passwordForm.currentPassword.$invalid && !change_passwordForm.currentPassword.$pristine && currentPasswordAttempted" class="validation-error">Password must be 7 characters or more</p>
           </div>
 
           <div id="newPassword" class="form-group">
@@ -26,7 +26,7 @@
           </div>
 
           <div class="form-group vertical-buttons">
-            <button type="submit" id="change_password-button" class="wide-button normal-button" ng-disabled="!change_passwordForm.$valid" ng-click="">
+            <button type="submit" id="change_password-button" class="wide-button normal-button" ng-disabled="!change_passwordForm.$valid" ng-click="changePassword()">
               <span class="button-text">done</span>
             </button>
             <p ng-show="changePasswordFailed" class="validation-error">Could not change password, please try again later</p>
