--- a/frontend/core/src/main/webapp/static/app/account/changePassword.html
+++ b/frontend/core/src/main/webapp/static/app/account/changePassword.html
@@ -10,27 +10,27 @@
           <div id="currentPassword" class="form-group">
             <label for="currentPassword" class="sr-only">old password</label>
             <input type="password" name="currentPassword" class="simple-input" id="input-old-password" ng-model="user.currentPassword" placeholder="enter old password..." ng-minlength="7" ng-blur="currentPasswordAttempted=true" required />
-            <p ng-show="change_passwordForm.currentPassword.$invalid && !change_passwordForm.currentPassword.$pristine && currentPasswordAttempted" class="validation-error">Password must be 7 characters or more</p>
+            <p ng-show="change_passwordForm.currentPassword.$invalid && !change_passwordForm.currentPassword.$pristine && currentPasswordAttempted" class="validation-error">password must be 7 characters or more</p>
           </div>
 
           <div id="newPassword" class="form-group">
             <label for="newPassword" class="sr-only">new password</label>
             <input type="password" name="newPassword" class="form-control simple-input" id="input-new-password" ng-model="user.newPassword" placeholder="enter new password..." ng-blur="newPasswordAttempted=true" required ng-minlength="7" />
-            <p ng-show="change_passwordForm.newPassword.$invalid && !change_passwordForm.newPassword.$pristine && newPasswordAttempted" class="validation-error">Password must be 7 characters or more</p>
+            <p ng-show="change_passwordForm.newPassword.$invalid && !change_passwordForm.newPassword.$pristine && newPasswordAttempted" class="validation-error">password must be 7 characters or more</p>
           </div>
 
           <div id="newPasswordReEnter" class="form-group">
             <label for="newPasswordReEnter" class="sr-only">new password again</label>
             <input type="password" name="newPasswordReEnter" class="form-control simple-input" id="input-new-password-again" ng-model="user.reEnteredNewPassword" ng-blur="reEnterNewPasswordAttempted=true" placeholder="re-enter new password..." password-match="user.newPassword"  required ng-minlength="7"/>
-            <p ng-show="change_passwordForm.newPasswordReEnter.$invalid && !change_passwordForm.newPasswordReEnter.$pristine && reEnterNewPasswordAttempted" class="validation-error">Passwords don't match</p>
+            <p ng-show="change_passwordForm.newPasswordReEnter.$invalid && !change_passwordForm.newPasswordReEnter.$pristine && reEnterNewPasswordAttempted" class="validation-error">passwords don't match</p>
           </div>
 
           <div class="form-group vertical-buttons">
             <button type="submit" id="change_password-button" class="wide-button normal-button" ng-disabled="!change_passwordForm.$valid" ng-click="changePassword()">
               <span class="button-text">done</span>
             </button>
-            <p ng-show="changePasswordFailed" class="validation-error">Could not change password, please try again later</p>
-            <p ng-show="changePasswordOffline" class="validation-error">Can't connect to server. Are you online?</p>
+            <p ng-show="changePasswordFailed" class="validation-error">could not change password</p>
+            <p ng-show="changePasswordOffline" class="validation-error">can't connect to server. are you online?</p>
             <button type="button" class="wide-button cancel-button" ng-click="gotoAccountPage()">cancel</button>
           </div>
 
