Changing password now does not require re-login. Backend returns 403 on invalid authentication, which is used in a new interceptor to direct the user to the login page whenever such an event occurs

--- a/frontend/core/src/main/webapp/static/app/auth/changePassword.html
+++ b/frontend/core/src/main/webapp/static/app/auth/changePassword.html
@@ -29,8 +29,9 @@
             <button type="submit" id="change_password-button" class="wide-button normal-button" ng-disabled="!change_passwordForm.$valid" ng-click="changePassword()">
               <span class="button-text">done</span>
             </button>
-            <p ng-show="changePasswordFailed" class="validation-error">could not change password</p>
+            <p ng-show="changePasswordFailed" class="validation-error">invalid old password</p>
             <p ng-show="changePasswordOffline" class="validation-error">can't connect to server. are you online?</p>
+            <p ng-show="loginFailed" class="validation-error">could not login with the new password</p>
             <button type="button" class="wide-button cancel-button" ng-click="gotoAccountPage()">cancel</button>
           </div>
 
