--- a/frontend/core/src/main/webapp/static/app/auth/forgot.html
+++ b/frontend/core/src/main/webapp/static/app/auth/forgot.html
@@ -33,25 +33,26 @@
       </div>
       <div ng-if="showResetForm()" class="content">
         <span class="instruction-text">
-          to reset your password type it to the following fields and press change password 
+          change password for <p class="content">{{user.email}}</p>
         </span>
         <form role="form" id="reset-form" name="resetForm" novalidate>
           <div class="form-group button-container vertical-buttons">
             <div id="password" class="form-group">
               <label for="password" class="sr-only">password</label>
-              <input type="password" name="password" class="form-control simple-input" id="input-password" ng-model="user.password" placeholder="enter password..." ng-blur="passwordAttempted=true" required ng-minlength="7" />
+              <input type="password" name="password" class="form-control simple-input" id="input-password" ng-model="user.password" placeholder="enter new password..." ng-blur="passwordAttempted=true" required ng-minlength="7" />
               <p ng-show="resetForm.password.$invalid && !resetForm.password.$pristine && passwordAttempted" class="validation-error">password must be 7 characters or more</p>
             </div>
             <div id="passwordReEnter" class="form-group">
               <label for="passwordReEnter" class="sr-only">password again</label>
-              <input type="password" name="passwordReEnter" class="form-control simple-input" id="input-password-again" ng-model="user.reEnteredPassword" ng-blur="reEnterAttempted=true" placeholder="re-enter password..." password-match="user.password"  required ng-minlength="7"/>
+              <input type="password" name="passwordReEnter" class="form-control simple-input" id="input-password-again" ng-model="user.reEnteredPassword" ng-blur="reEnterAttempted=true" placeholder="re-enter new password..." password-match="user.password"  required ng-minlength="7"/>
               <p ng-show="resetForm.passwordReEnter.$invalid && !resetForm.passwordReEnter.$pristine && reEnterAttempted" class="validation-error">passwords don't match</p>
             </div>
             <button type="submit" id="send-button" class="wide-button normal-button" ng-disabled="!resetForm.$valid" ng-click="resetPassword()">
-              <span class="button-text">change password</span>
+              <span class="button-text">login</span>
             </button>
             <p ng-show="resetFailed" class="validation-error">reseting password failed</p>
             <p ng-show="resetOffline" class="validation-error">can't connect to server. are you online?</p>
+            <p ng-show="loginFailed" class="validation-error">could not login with new password</p>
             <button type="submit" id="cancel-button" class="wide-button cancel-button" ng-click="gotoLogin()">
               <span class="button-text">cancel</span>
             </button>
