Added requirements for terms of service and privacy policy to sign up

--- a/frontend/core/src/main/webapp/static/app/auth/signup.html
+++ b/frontend/core/src/main/webapp/static/app/auth/signup.html
@@ -21,8 +21,13 @@
             <input type="password" name="passwordReEnter" class="form-control simple-input" id="input-password-again" ng-model="user.reEnteredPassword" ng-blur="reEnterAttempted=true" placeholder="re-enter password..." password-match="user.password"  required ng-minlength="7"/>
             <p ng-show="signupForm.passwordReEnter.$invalid && !signupForm.passwordReEnter.$pristine && reEnterAttempted" class="validation-error">passwords don't match</p>
           </div>
+          <div class="form-group table-wrapper">
+            <input class="input-checkbox left-checkbox-wrapper" type="checkbox" name="agree" id="agree" ng-model="user.agree" ng-true-value="true" />
+            <label class="checkbox swiper-no-swiping" for="agree"></label>
+            <span id="agreeText" class="center-input-wrapper">I have read and agree to the <a href ng-click="gotoTermsOfService()">terms of service</a> and <a href ng-click="gotoPrivacyPolicy()">privacy policy</a></span>
+          </div>
           <div class="form-group button-container">
-            <button type="submit" id="login-button" class="wide-button normal-button" ng-disabled="!signupForm.$valid" ng-click="signUp()">
+            <button type="submit" id="login-button" class="wide-button normal-button" ng-disabled="!signupForm.$valid || user.agree !== 'true'" ng-click="signUp()">
               <span class="button-text">signup</span>
             </button>
             <p ng-show="signupFailed" class="validation-error">could not sign up, please try again later</p>
