Launch offline and failed status messages to Launch page.

--- a/frontend/core/src/main/webapp/static/app/auth/launch.html
+++ b/frontend/core/src/main/webapp/static/app/auth/launch.html
@@ -16,6 +16,7 @@
               <span class="button-text">done</span>
             </button>
             <p ng-show="launchFailed" class="validation-error">invalid email</p>
+            <p ng-show="launchOffline" class="validation-error">can't connect to server. are you online?</p>
           </div>
         </form>
       </div>
