Changed date format to default to US

--- a/frontend/core/src/main/webapp/static/app/tasks/taskCoreFields.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskCoreFields.html
@@ -7,7 +7,7 @@
           <span class="simple-input default-element" ng-click="focusDate()">select date...</span>
         </div>
         <div ng-switch-when="true">
-          <span class="simple-input default-element" ng-model="task.date" ng-click="focusDate()">{{task.date | date:'MM/dd/yyyy'}}</span>
+          <span class="simple-input default-element" ng-model="task.date" ng-click="focusDate()">{{task.date | date:'dd/MM/yyyy'}}</span>
         </div>
       </div>
 
