--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -53,12 +53,14 @@
     <script src="static/app/base/ListsController.js"></script>
     <script src="static/app/base/ListsService.js"></script>
     <script src="static/app/base/ModalService.js"></script>
+    <script src="static/app/base/SnapService.js"></script>
     <script src="static/app/base/SwiperService.js"></script>
     <script src="static/app/base/TagsService.js"></script>
     <script src="static/app/base/UserSessionService.js"></script>
     <script src="static/app/base/accordionDirective.js"></script>
     <script src="static/app/base/accordionTitleDirective.js"></script>    
     <script src="static/app/base/expandingTextareaDirective.js"></script>   
+    <script src="static/app/base/snapDirective.js"></script>
     <script src="static/app/base/swiperClickDirective.js"></script>
     <script src="static/app/base/swiperContainerDirective.js"></script>
     <script src="static/app/base/swiperSlideDirective.js"></script>
@@ -93,6 +95,7 @@
     <script src="static/app/main/NavbarController.js"></script>
     <script src="static/app/main/PageNotFoundController.js"></script>
 
+    <script src="static/lib/snap.js"></script>
     <script src="static/lib/fastclick.js"></script>
 
     <script src="test/AppTest.js"></script>
