--- a/frontend/core/src/main/webapp/static/app/main/tasksSlides.html
+++ b/frontend/core/src/main/webapp/static/app/main/tasksSlides.html
@@ -1,28 +1,4 @@
-<div id="drawer" class="snap-drawer snap-drawer-left swiper-no-swiping" ng-show="isSnapVisible">
-  <div id="menu-content">
-    <ul>
-      <li>
-        <a href ng-click="setMyActive()" class="active">home</a>
-      </li>
-      <li ng-show="useCollectives()">
-        <span>collectives</span>
-        <ul>
-          <li ng-repeat="(key, value) in collectives">
-            <div ng-if="value[2] === false">
-              <a class="collective" href ng-click="setCollectiveActive(key)">{{value[0]}}</a>
-            </div>
-          </li>
-        </ul>
-      </li>
-      <li>
-        <a href="#/my/account">account</a>
-      </li>
-      <li>
-        <a href ng-click="logout()">logout</a>
-      </li>
-    </ul>
-  </div>
-</div>
+<div ng-include="'static/app/main/drawer.html'"></div>
 <div class="slides-container" ng-init="feature='tasks'" ng-controller="MainController" snap-directive>
   <!-- TODO: use ng-if with expected-slides="tasks.length > 0 && 6 || 2" -->
   <div class="swiper-container main-slides" swiper-container="tasks" swiper-type="main" expected-slides="5">
