Added iScroll lite.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -29,6 +29,7 @@
 
     <script src="static/lib/base64.js"></script>
     <script src="static/lib/expanding.js"></script>
+    <script src="static/lib/iscroll-lite.js"></script>
 
     <script src="static/common/common.js"></script>
     <script src="static/common/DateService.js"></script>
@@ -61,6 +62,7 @@
     <script src="static/app/base/accordionTitleDirective.js"></script>    
     <script src="static/app/base/expandingTextareaDirective.js"></script>   
     <script src="static/app/base/snapDirective.js"></script>
+    <script src="static/app/base/scrollableDirective.js"></script>
     <script src="static/app/base/swiperClickDirective.js"></script>
     <script src="static/app/base/swiperContainerDirective.js"></script>
     <script src="static/app/base/swiperSlideDirective.js"></script>
